# sc-corr-testing

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  sc_corr-environment.yml
pysc/: ops.py  stream.py  utils.py
tests/: test_ops.py  test_stream.py  test_utils.py
